Bug 1656248 - Associate the JS script with the loader script for scripts loaded from the bytecode cache like we do for compiled scripts r=smaug

The problem is that ResolveModuleSpecifier is being passed a null script and is falling back to using the document base URL to resolve the module import (which is the correct thing to do in some cases). This is happening because the referring JS script was not assoicated with a loader script when it was loaded since it came from the bytecode cache and the logic to do that is missing on this path.

Differential Revision: https://phabricator.services.mozilla.com/D86352